<resources>
    <string name="app_name">Gym Tracker</string>
    <string name="welcome_message">Welcome, %s.</string>
    <string name="title_home">Home</string>
    <string name="title_routines">Routines</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_profile">Profile</string>
    <string name="update_exercise_success">Exercise updated successfully.</string>
    <string name="add_exercise_success">Exercise added successfully.</string>
    <string name="fill_fields_warning">Please fill all fields correctly.</string>
    <string name="delete_exercise_success">Exercise deleted successfully.</string>
    <string name="delete_exercise_error">Error deleting exercise.</string>
    <string name="same_name_exercise_error">Exercise with the same name already exists.</string>
    <string name="workouts_progress">%d Workouts</string>
    <string name="sets_progress">%d Sets</string>
    <string name="reps_progress">%d Repetitions</string>
    <string name="updated_profile_success">Profile updated successfully.</string>
    <string name="height_and_weight_greater_than_zero">Height and weight must be greater than 0.</string>
    <string name="formatting_float_number">%.2f</string>
    <string name="underweight_format">%.2f (Underweight)</string>
    <string name="normal_weight_format">%.2f (Normal Weight)</string>
    <string name="overweight_format">%.2f (Overweight)</string>
    <string name="obesity_format">%.2f (Obesity)</string>
    <string name="invalid_bmi">Invalid BMI.</string>
    <string name="routine_marked_as_done">Routine marked as done with success.</string>
    <string name="routine_update_success">Routine updated successfully.</string>
    <string name="routine_update_error">Error updating routine.</string>
    <string name="user_already_authenticated">User already authenticated: %s</string>
    <string name="google_signin_failed">Google Sign-In failed</string>
    <string name="google_signin_with_credential_success">signInWithCredential:success</string>
    <string name="google_signin_with_credential_failure">signInWithCredential:failure</string>

    <string-array name="primary_muscles">
        <item>Abdomen</item>
        <item>Forearms</item>
        <item>Biceps</item>
        <item>Back</item>
        <item>Glutes</item>
        <item>Shoulders</item>
        <item>Chest</item>
        <item>Legs</item>
        <item>Trapezius</item>
        <item>Triceps</item>
    </string-array>

    <string name="phrase_1">Each workout is one step closer to your goals.</string>
    <string name="phrase_2">You’ll never regret training, but you might regret not going.</string>
    <string name="phrase_3">The only bad workout is the one that didn’t happen.</string>
    <string name="phrase_4">Discipline is what keeps you going when motivation runs out.</string>
    <string name="phrase_5">Results come with time, effort, and persistence.</string>
    <string name="phrase_6">Your body can handle it, your mind just needs to believe it.</string>
    <string name="phrase_7">Pain is temporary, but glory is eternal.</string>
    <string name="phrase_8">Nutrition is as important as training.</string>
    <string name="phrase_9">You don’t need to be extreme, you just need to be consistent.</string>
    <string name="phrase_10">Be better than yesterday, even if it’s just by 1%.</string>
    <string name="phrase_11">Great changes start with small daily habits.</string>
    <string name="phrase_12">No one can train for you, make it happen!</string>
    <string name="phrase_13">Be strong enough to start and disciplined enough to continue.</string>
    <string name="phrase_14">Exercise isn’t punishment, it’s a gift for your body.</string>
    <string name="phrase_15">Your future depends on what you do today.</string>
    <string name="phrase_16">You don’t need luck, you need effort.</string>
    <string name="phrase_17">Train until it becomes a habit, not an obligation.</string>
    <string name="phrase_18">Take care of your body, it’s the only place you have to live.</string>
    <string name="phrase_19">Strength doesn’t come from the body, but from an unbreakable will.</string>
    <string name="phrase_20">Each repetition brings you one step closer to your dreams.</string>
    <string name="phrase_21">Progress may be slow, but quitting won’t speed it up.</string>
    <string name="phrase_22">The impossible is just a matter of time and dedication.</string>
    <string name="phrase_23">Train as if your life depends on it, one day it might.</string>
    <string name="phrase_24">Don’t compare yourself to others, compare yourself to who you were yesterday.</string>
    <string name="phrase_25">Believe in yourself and nothing will be impossible.</string>
    <string name="phrase_26">What you eat in private reflects in public.</string>
    <string name="phrase_27">Feed your body with healthy food and your mind with positive thoughts.</string>
    <string name="phrase_28">Every great journey begins with a first step.</string>
    <string name="phrase_29">Muscles aren’t built with excuses.</string>
    <string name="phrase_30">Nothing changes if you don’t change.</string>

    <string name="default_web_client_id" translatable="false">69803421723-i08n81jo5ici02nuc3iv6ufev5g1baun.apps.googleusercontent.com</string>

    <string name="login_with_google">Login with Google</string>
    <string name="welcome_to_gym_tracker">Welcome to Gym Tracker</string>
    <string name="welcome_message_login">Log your workouts, track your progress, and stay focused!</string>
    <string name="exercise_icon">Exercise Icon</string>
    <string name="sets">Sets</string>
    <string name="weight">Weight</string>
    <string name="repetitions">Repetitions</string>
    <string name="primary_muscle">Primary Muscle</string>
    <string name="name">Name</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="save_exercise">Save Exercise</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="personal_record">Personal Record (PR)</string>
    <string name="notes">Notes</string>
    <string name="routine_name">Routine Name</string>
    <string name="save_routine">Save Routine</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="remove_exercise">Remove Exercise</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="description">Description</string>
    <string name="mark_routine_as_done">Mark Routine as Done</string>
    <string name="routine_icon">Routine Icon</string>
    <string name="username">Username</string>
    <string name="birthdate">Birthdate</string>
    <string name="height_cm">Height (cm)</string>
    <string name="body_weight">Body Weight</string>
    <string name="save_profile">Save Profile</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="motivational_phrase">Motivational Phrase</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="new_exercise">New Exercise</string>
    <string name="personal_info">Personal Info</string>
    <string name="erase_progress">Erase Progress</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="body_mass_index_bmi">Body Mass Index (BMI)</string>
    <string name="add_new_routine">Add new routine</string>
</resources>