<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lucascosta.gymtracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="com.lucascosta.gymtracker.ui.routines.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routines" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.lucascosta.gymtracker.ui.exercises.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercises" >
        <action
            android:id="@+id/action_navigation_exercises_to_navigation_add_exercise"
            app:destination="@id/navigation_add_exercise" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lucascosta.gymtracker.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_add_exercise"
        android:name="com.lucascosta.gymtracker.ui.exercises.AddExerciseFragment"
        tools:layout="@layout/fragment_add_exercise" >
        <argument
            android:name="exercise"
            app:argType="com.lucascosta.gymtracker.data.model.ExerciseModel"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

</navigation>