<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/personal_info" />

    <TextView
        android:id="@+id/motivational_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_white_background"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:padding="20dp"
        android:text="@string/motivational_phrase"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/star"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_message"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/weekly_progress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/new_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_background"
        android:drawablePadding="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="2"
        android:maxWidth="170dp"
        android:minHeight="60dp"
        android:paddingHorizontal="20dp"
        android:text="@string/new_exercise"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_exercises"
        app:drawableTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivational_phrase" />

    <TextView
        android:id="@+id/personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_white_background"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:lines="2"
        android:maxWidth="170dp"
        android:minHeight="60dp"
        android:paddingHorizontal="20dp"
        android:text="@string/personal_info"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_profile"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motivational_phrase" />

    <TextView
        android:id="@+id/workouts_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_white_background"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:padding="12dp"
        android:text="@string/workouts_progress"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_analytics"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/sets_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_background"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:padding="12dp"
        android:text="@string/sets_progress"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_analytics"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workouts_progress" />

    <TextView
        android:id="@+id/repetitions_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_background"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:padding="12dp"
        android:text="@string/reps_progress"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_analytics"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sets_progress" />

    <Button
        android:id="@+id/erase_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/red_500"
        android:drawableLeft="@drawable/trash"
        android:drawableTint="@color/black"
        android:text="@string/erase_progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>